<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:padding="@dimen/margin_standard_16dp"
    android:scrollbarStyle="outsideInset">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical">

        <TextView
            android:text="@string/edit_identity_description_label"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="?android:attr/textColorPrimary" />

        <EditText
            android:id="@+id/description"
            android:singleLine="true"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:hint="@string/edit_identity_description_hint" />

        <TextView
            android:text="@string/edit_identity_name_label"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:layout_marginTop="@dimen/margin_standard_8dp"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="?android:attr/textColorPrimary" />

        <EditText
            android:id="@+id/name"
            android:singleLine="true"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:hint="@string/edit_identity_name_hint" />

        <TextView
            android:text="@string/edit_identity_email_label"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:layout_marginTop="@dimen/margin_standard_8dp"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="?android:attr/textColorPrimary" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/email"
                android:layout_width="0dp"
                android:layout_weight=".7"
                android:layout_height="wrap_content"
                android:hint="@string/edit_identity_email_hint"
                android:maxLines="1" />

            <TextView
                android:id="@+id/account_domain"
                android:layout_width="0dp"
                android:layout_weight=".3"
                android:layout_height="wrap_content"
                android:maxLines="1" />
        </LinearLayout>

        <TextView
            android:text="@string/edit_identity_reply_to_label"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:layout_marginTop="@dimen/margin_standard_8dp"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="?android:attr/textColorPrimary" />

        <EditText
            android:id="@+id/reply_to"
            android:singleLine="true"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:hint="@string/edit_identity_reply_to_hint"
            android:inputType="textEmailAddress" />
        <!--
    <TextView
        android:text="@string/edit_identity_always_bcc_label"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="?android:attr/textColorPrimary" />
    <EditText
        android:id="@+id/account_always_bcc"
        android:singleLine="true"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent" />
        -->
        <CheckBox
            android:id="@+id/signature_use"
            android:layout_width="fill_parent"
            android:layout_marginTop="@dimen/margin_standard_8dp"
            android:layout_height="wrap_content"
            android:text="@string/account_settings_signature_use_label" />

        <LinearLayout
            android:id="@+id/signature_layout"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical">

            <TextView
                android:text="@string/edit_identity_signature_label"
                android:layout_height="wrap_content"
                android:layout_width="fill_parent"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="?android:attr/textColorPrimary" />

            <EditText
                android:id="@+id/signature"
                android:singleLine="false"
                android:layout_height="wrap_content"
                android:layout_width="fill_parent"
                android:hint="@string/edit_identity_signature_hint" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>
