<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fadingEdge="none"
    android:padding="@dimen/margin_standard_16dp"
    android:scrollbarStyle="outsideInset">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical">

        <TextView
            android:text="@string/account_settings_name_label"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="?android:attr/textColorPrimary" />

        <EditText
            android:id="@+id/account_name"
            android:maxLines="1"
            android:inputType="textPersonName"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:contentDescription="@string/account_settings_name_label" />

        <TextView
            android:text="@string/account_settings_email_label"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:layout_marginTop="@dimen/margin_standard_8dp"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="?android:attr/textColorPrimary" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/account_email"
                android:layout_width="0dp"
                android:layout_weight=".7"
                android:layout_height="wrap_content"
                android:hint="@string/account_setup_basics_email_hint"
                android:maxLines="1" />

            <TextView
                android:id="@+id/account_domain"
                android:layout_width="0dp"
                android:layout_weight=".3"
                android:layout_height="wrap_content"
                android:maxLines="1" />
        </LinearLayout>

        <TextView
            android:text="@string/account_settings_always_bcc_label"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:layout_marginTop="@dimen/margin_standard_8dp"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="?android:attr/textColorPrimary" />

        <EditText
            android:id="@+id/account_always_bcc"
            android:maxLines="1"
            android:inputType="textEmailAddress"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:contentDescription="@string/account_settings_always_bcc_label" />

        <CheckBox
            android:id="@+id/account_signature_use"
            android:layout_width="fill_parent"
            android:layout_marginTop="@dimen/margin_standard_8dp"
            android:layout_height="wrap_content"
            android:text="@string/account_settings_signature_use_label" />

        <LinearLayout
            android:id="@+id/account_signature_layout"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical">

            <TextView
                android:text="@string/account_settings_signature_label"
                android:layout_height="wrap_content"
                android:layout_width="fill_parent"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="?android:attr/textColorPrimary" />

            <EditText
                android:id="@+id/account_signature"
                android:inputType="textMultiLine|textAutoCorrect|textCapSentences"
                android:layout_height="wrap_content"
                android:layout_width="fill_parent"
                android:contentDescription="@string/account_settings_signature_label" />

            <TextView
                android:text="@string/account_settings_signature__location_label"
                android:layout_height="wrap_content"
                android:layout_width="fill_parent"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="?android:attr/textColorPrimary" />

            <RadioGroup
                android:id="@+id/account_signature_location"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/account_signature_location_before_quoted_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/account_settings_signature__location_before_quoted_text"
                    android:contentDescription="@string/account_settings_signature__location_label" />

                <RadioButton
                    android:id="@+id/account_signature_location_after_quoted_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/account_settings_signature__location_after_quoted_text"
                    android:contentDescription="@string/account_settings_signature__location_label" />
            </RadioGroup>
        </LinearLayout>
    </LinearLayout>
</ScrollView>
