<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_height="fill_parent"
    android:layout_width="fill_parent">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:paddingLeft="@dimen/margin_standard_16dp"
        android:paddingBottom="@dimen/margin_standard_16dp"
        android:paddingRight="@dimen/margin_standard_16dp"
        android:paddingTop="@dimen/margin_standard_56dp"
        android:fadingEdge="none"
        android:scrollbarStyle="outsideInset">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:text="@string/account_setup_incoming_username_label"
                android:layout_height="wrap_content"
                android:layout_width="fill_parent"
                style="@style/CaptionStyle" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/account_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="bottom"
                    android:hint="@string/account_setup_basics_email_hint"
                    android:layout_toLeftOf="@+id/account_domain"
                    android:maxLines="1"
                    style="@style/Body1Style" />

                <TextView
                    android:id="@+id/account_domain"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    style="@style/Body1Style" />
            </RelativeLayout>

            <TextView
                android:text="@string/account_setup_incoming_password_label"
                android:layout_height="wrap_content"
                android:layout_width="fill_parent"
                style="@style/CaptionStyle" />

            <EditText
                android:id="@+id/account_password"
                android:maxLines="1"
                android:inputType="textPassword"
                android:layout_height="wrap_content"
                android:layout_width="fill_parent"
                android:contentDescription="@string/account_setup_incoming_password_label"
                style="@style/Body1Style" />

            <CheckBox
                android:id="@+id/show_password"
                android:layout_height="wrap_content"
                android:layout_width="fill_parent"
                style="@style/CaptionStyle"
                android:text="@string/account_setup_basics_show_password" />

        </LinearLayout>
    </ScrollView>

    <include layout="@layout/wizard_next" />
</LinearLayout>
