<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.tiscali.appmail.ui.messageview.MessageTopView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:custom="http://schemas.android.com/apk/res-auto"
        android:id="@+id/message_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight="1"
        android:background="?attr/messageViewBackgroundColor">

        <com.tiscali.appmail.view.NonLockingScrollView
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <!-- Header area -->
                <include layout="@layout/message_view_header" />

                <Button
                    android:id="@+id/show_pictures"
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_marginBottom="4dip"
                    android:layout_marginLeft="6dip"
                    android:layout_marginRight="6dip"
                    android:layout_marginTop="4dip"
                    android:text="@string/message_view_show_pictures_action"
                    android:visibility="gone"
                    tools:visibility="visible" />

                <com.tiscali.appmail.view.ToolableViewAnimator
                    android:id="@+id/message_layout_animator"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inAnimation="@anim/fade_in"
                    android:outAnimation="@anim/fade_out"
                    custom:previewInitialChild="1">

                    <View
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="8dp">

                        <ProgressBar
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingTop="30dp"
                            android:paddingBottom="30dp"
                            android:indeterminate="false"
                            android:id="@+id/message_progress"
                            android:max="1000"
                            tools:progress="300"
                            style="@android:style/Widget.Holo.ProgressBar.Horizontal" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/message_progress"
                            android:layout_centerInParent="true"
                            android:id="@+id/message_progress_text"
                            android:text="@string/message_progress_text" />

                    </RelativeLayout>

                    <FrameLayout
                        android:orientation="vertical"
                        android:id="@+id/message_container"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content" />

                </com.tiscali.appmail.view.ToolableViewAnimator>

                <Button
                    android:id="@+id/download_remainder"
                    android:text="@string/message_view_download_remainder"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    android:layout_width="fill_parent" />

            </LinearLayout>

        </com.tiscali.appmail.view.NonLockingScrollView>

    </com.tiscali.appmail.ui.messageview.MessageTopView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:gravity="center">

        <ImageButton
            android:id="@+id/mail_previous_btn"
            android:layout_width="@dimen/margin_standard_56dp"
            android:layout_height="@dimen/margin_standard_56dp"
            android:layout_gravity="right"
            android:src="@drawable/ic_keyboard_arrow_left_black_24dp"
            android:background="@drawable/selector_message_arrow"
            android:layout_marginRight="@dimen/margin_standard_4dp" />

        <ImageButton
            android:id="@+id/mail_next_btn"
            android:layout_width="@dimen/margin_standard_56dp"
            android:layout_height="@dimen/margin_standard_56dp"
            android:src="@drawable/ic_keyboard_arrow_right_black_24dp"
            android:background="@drawable/selector_message_arrow"
            android:layout_marginRight="@dimen/margin_standard_4dp" />

    </LinearLayout>
</RelativeLayout>